create component history

--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -1,1 +1,7 @@
-<p>history works!</p>
+<app-navbar></app-navbar>
+<div class="section">
+  <div class="container">
+    <h2>Score History</h2>
+    <p>Past scores will show here!</p>
+  </div>
+</div>
