create component quiz

--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,1 +1,7 @@
-<p>quiz works!</p>
+<app-navbar></app-navbar>
+<div class="section">
+  <div class="container">
+    <h2>Quiz Page</h2>
+    <p>Questions will appear here soon!</p>
+  </div>
+</div>
