create component result

--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,1 +1,7 @@
-<p>result works!</p>
+<app-navbar></app-navbar>
+<div class="section">
+  <div class="container">
+    <h2>Your Score</h2>
+    <p>Score display coming soon!</p>
+  </div>
+</div>
