--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,9 @@
           <a class="nav-link" routerLink="/quiz">Questions</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/leaderboard">Classement</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/history">Historique</a>
         </li>
       </ul>
