--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,10 +10,10 @@
           <a class="nav-link" routerLink="/quiz">Questions</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/leaderboard">Classement</a>
+          <a class="nav-link" routerLink="/leaderboard">Ranking</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/history">Historique</a>
+          <a class="nav-link" routerLink="/history">History</a>
         </li>
       </ul>
     </div>
