Add FooterComponent to Quiz App

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <h3>Jouons</h3>
+    <h3>Let's play</h3>
     <div class="category-grid">
       <div class="category-card" *ngFor="let cat of categories" (click)="selectCategory(cat.id)">
         <img [src]="cat.image" [alt]="cat.name" class="category-icon" />
